Finish dev phase

--- a/public-src/styles/_colors.scss
+++ b/public-src/styles/_colors.scss
@@ -1,6 +1,9 @@
 $color-orange: #fb923c;
+$color-light-brown: #d88668;
 $color-tomato: tomato;
 $color-black-2: #222;
+$color-black-1: #111;
+$color-teal: #00cfbc;
 
 $color-grey: #b4b4b4;
 $color-grey-dark-1: #9c9c9c;
