--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,14 +1,18 @@
-<section class="server-err-section">
-  <div class="ctr">
-    <h1 class="msg">
+<section class='server-err-section'>
+  <div class='ctr'>
+    <h1 class='msg'>
       <pre>
-        <%= locals.serverError?.message %>
+        <%= serverError.status || 500 %>
+        <%= serverError.message  %>
       </pre>
     </h1>
-    <h2 class="status">status: <%= locals.serverError?.status || 500 %></h2>
+
     <hr />
-    <% if (locals.serverError?.stack) { %>
-    <pre class="stack">stack: <%= locals.serverError?.stack %></pre>
+
+    <% if (serverError.stack) { %>
+      <pre class='stack'>
+        stack: <%= serverError.stack %>
+      </pre>
     <% } %>
   </div>
 </section>
