--- a/views/partials/main-header.ejs
+++ b/views/partials/main-header.ejs
@@ -1,7 +1,12 @@
 <header class="main-header">
-  <h1>Extensions Marketplace</h1>
+  <h1><a href="/">Extensions Marketplace</a></h1>
 
-  <div class="flex-ctr gap-sm">
+  <ul class="nav-links">
+    <li class="nav-link"><a href="/categories">categories</a></li>
+    <li class="nav-link"><a href="/extensions">extensions</a></li>
+  </ul>
+
+  <div class="flex-ctr gap-sm action-btns">
     <a href="/categories/create" class="btn btn-primary btn-md add-category">
       add category
     </a>
