--- a/public-src/styles/_general.scss
+++ b/public-src/styles/_general.scss
@@ -87,11 +87,14 @@ select {
   background-color: $color-black-2;
   color: $color-white;
 
-  transition: all 0.3s;
-
   &.invalid {
     border-color: $color-danger;
   }
+}
+
+input,
+select {
+  transition: all 0.3s;
 }
 
 option {
@@ -116,6 +119,22 @@ option {
       color: $color-tomato;
     }
   }
+
+  .input-img-description {
+    align-self: flex-end;
+
+    img {
+      width: 4.8rem;
+      height: 4.8rem;
+      border-radius: 50%;
+    }
+  }
+
+  .input-description {
+    color: $color-grey-dark-1;
+    font-size: 1.4rem;
+    font-weight: 500;
+  }
 }
 
 form {
@@ -136,12 +155,16 @@ form {
 }
 
 .ctr {
-  width: min(100%, 90rem);
+  width: min(100% - 3.2rem, 111rem);
   padding: 3.2rem;
   border-radius: 1.4rem;
   margin: 0 auto;
 
   background-color: $ctr-bg-color;
+
+  &.no-bg {
+    background-color: transparent;
+  }
 }
 
 section {
@@ -158,7 +181,7 @@ section {
 
 .extension-list {
   display: grid;
-  grid-template-columns: repeat(auto-fill, 22rem);
+  grid-template-columns: repeat(auto-fill, 30rem);
   justify-content: center;
   gap: 1.8rem;
   margin-bottom: 3rem;
@@ -169,15 +192,17 @@ section {
   background-color: $color-gray--blue;
   border: 0.1rem solid transparent;
   border-radius: 0.8rem;
+
   display: grid;
-  grid-template-columns: auto 1fr auto;
+  grid-template-columns: repeat(2, auto);
+  justify-content: space-between;
   align-items: center;
-  gap: 1.6rem;
+  gap: 2.4rem;
   grid-template-areas:
-    'img img img'
-    '. title .'
-    'category . downloads'
-    'stars stars stars';
+    'img img'
+    'title title'
+    'category downloads'
+    'stars stars';
 
   overflow: hidden;
 
@@ -189,10 +214,11 @@ section {
 
   .img {
     grid-area: img;
-
-    height: 8rem;
-    width: 8rem;
     justify-self: center;
+
+    height: 15rem;
+    width: 15rem;
+    border-radius: 50%;
   }
 
   .title {
@@ -202,6 +228,7 @@ section {
     font-weight: 500;
     color: $color-white;
     text-align: center;
+    margin-bottom: 1.6rem;
   }
 
   .category {
@@ -213,6 +240,7 @@ section {
 
   .downloads {
     grid-area: downloads;
+    justify-self: end;
 
     display: flex;
     align-items: center;
