--- a/views/layouts/base.ejs
+++ b/views/layouts/base.ejs
@@ -1,21 +1,31 @@
-<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Extensions Marketplace &VerticalBar; <%= locals.title %></title>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>
+    Extensions Marketplace
+    <% if (locals.title) { %> &VerticalBar; <%= title %> <%}%>
+    </title>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
     <link rel="stylesheet" href="/static/styles/index.css" />
     <link rel="shortcut icon" href="/static/imgs/favicon.svg" type="image/x-icon" />
+    <script src="/static/js/utils.js" defer></script>
   </head>
 
   <body>
-    <%- include('../partials/main-header') %>
-    <!--  -->
-    <%- body %>
+    <div class="overlay" class="hidden"></div>
+    <%- include ('../partials/main-header') %>
+    <%- include ('../partials/flash-messages') %>
+    <%- include ('../partials/modal.ejs') %>
+
+    <main>
+      <%- body  %>
+    </main>
   </body>
+
 </html>
